Adicionando o Footer e Readme

--- a/index.html
+++ b/index.html
@@ -200,7 +200,14 @@
           </ul>
         </div>
       </section>
+
+      <footer>
+        <a href="https://www.dio.me/" target="_blank">
+          <img src="./assets/img/dio.svg" alt="DIO" />
+        </a>
+      </footer>
     </div>
+
     <div class="gradient-bottom"></div>
 
     <script src="./js/accordeon.js"></script>
